Feat : 전역 예외처리 추가